2008-04-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-ems.el (gnus-x-splash): Prefer mm-disable-multibyte to
	default-enable-multibyte-characters.

	* gnus-fun.el (gnus-display-x-face-in-from): Remove unnecessary use of
	default-enable-multibyte-characters.

	* mm-decode.el (mm-inline-media-tests): Add entry for x-diff.

	* nnweb.el (nnweb-init): Avoid nn-with-unibyte.

2008-04-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-win.el (gnus-configure-frame, gnus-all-windows-visible-p):
	Fix last change in case the element is not even a symbol.

2008-03-31  Glenn Morris  <rgm@gnu.org>

	* message.el (mml2015-use): Declare for compiler.
	(message-info): Require mml2015 when appropriate.

2008-03-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el (nntp-netcat-command): Rename from nntp-via-netcat-command.
	(nntp-netcat-switches): Rename from nntp-via-netcat-switches.
	(nntp-open-telnet, nntp-open-rlogin): Use with-current-buffer.
	(nntp-service-to-port): New function.
	(nntp-open-via-rlogin-and-netcat, nntp-open-via-telnet-and-telnet)
	(nntp-open-telnet-stream, nntp-open-via-rlogin-and-telnet): Use it.
	(nntp-open-netcat-stream): New function.
	(nntp-open-via-rlogin-and-netcat): Don't use a pty.

2008-03-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-make-in-reply-to): Use mm-with-multibyte-buffer.

2008-03-28  Michael Harnois  <mdharnois@gmail.com>  (tiny change)

	* nnimap.el (nnimap-find-minmax-uid): Fix Exchange 2007 IMAP problem.

2008-03-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-signature-separator): Change default.
	Improve custom type.
	(message-cite-function): Change default to
	message-cite-original-without-signature.

	* gnus-sum.el (gnus-summary-make-menu-bar): Add message-cite-function
	toggle.

	* message.el (message-check-news-body-syntax): Fix signature check.
	(message-setup-1): Mark buffer as unmodified _after_ running
	message-setup-hook and handling message-alternative-emails.